@@ -1,5 +1,8 @@
 <?php 
-require_once get_template_directory() .'/cs-framework/cs-framework.php';
+
+// Featured Image
+//Featured Image Support
+add_theme_support( 'post-thumbnails' );
 
 /*Navigations*/
 // Register Custom Navigation Walker
@@ -238,4 +241,33 @@ endif;
 remove_filter('get_the_excerpt', 'wp_trim_excerpt');
 add_filter('get_the_excerpt', 'wpse_custom_wp_trim_excerpt');
 /*/Custom Trimming*/
+
+// new update
+
+// For Setup Post type
+
+add_theme_support( 'post-formats', array(
+		'image', 'video', 'audio',
+	) );
+
+
+// For Setup Thumbnail
+function autoset_featured() {
+ global $post;
+ $already_has_thumb = has_post_thumbnail($post->ID);
+ if (!$already_has_thumb) {
+ $attached_image = get_children( "post_parent=$post->ID&post_type=attachment&post_mime_type=image&numberposts=1" );
+ if ($attached_image) {
+ foreach ($attached_image as $attachment_id => $attachment) {
+ set_post_thumbnail($post->ID, $attachment_id);
+ }
+ }
+ }
+ }
+add_action('the_post', 'autoset_featured');
+add_action('save_post', 'autoset_featured');
+add_action('draft_to_publish', 'autoset_featured');
+add_action('new_to_publish', 'autoset_featured');
+add_action('pending_to_publish', 'autoset_featured');
+add_action('future_to_publish', 'autoset_featured');
 ?>
