@@ -503,3 +503,8 @@ p{
   .header-text{ margin-top: 5px !important;
   }
 }
+
+.posty-thumb img{
+    width: 220px;
+    height:150px;
+}
