@@ -9,3 +9,10 @@ Theme Feature:
 # customizable Header
 # customizable Page
 # Included own sitemap Page
+
+
+
+17-06-2016
+# added post thumbnail
+# added post type support
+# some bug fixed
